<?xml version="1.0" encoding="utf-8"?>
<com.scandev.View.LinearLayoutView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.scandev.ExceptionEditActivity">

    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hideLayout"
        android:orientation="vertical">

        <RelativeLayout
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/laneForExcept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:text="Lane Name:"/>

            <TextView
                android:id="@+id/arcForExcept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:textSize="15dp"
                android:text="Arc Info:"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:id="@+id/code_mannual_input">

            <EditText
                android:id="@+id/nowScanIdForExcep"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:isScrollContainer="true"
                android:hint="@string/hint_nowScan"/>
            <Button
                android:id="@+id/addToExcepList"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/addToList"
                android:textSize="20dp"
                android:onClick="addToExceptionList" />
        </LinearLayout>

        <TextView
            android:id="@+id/id_with_exception"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/scan_text_border"
            android:layout_gravity="center_horizontal"
            android:textSize="40dp"
            android:text=""/>

        <Spinner
            android:id="@+id/exception_type"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:entries="@array/exceptions"
            android:prompt="@string/select_exception_type">
        </Spinner>

    </LinearLayout>

    <EditText
        android:id="@+id/excepDescription"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:inputType="textMultiLine"
        android:gravity="left|top"
        android:minLines="2"
        android:textSize="20dp"
        android:background="@drawable/scan_text_border"
        android:hint="异常描述"
        android:text=""/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:visibility="visible"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:drawableTop="#aaa"
                android:text="图片" />

            <com.scandev.View.GridViewForScroll
                android:id="@+id/act_exception_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:columnWidth="80dp"
                android:numColumns="auto_fit" >
            </com.scandev.View.GridViewForScroll>
        </LinearLayout>


    <Button
        android:id="@+id/exception_upload"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/operatore_bg"
        android:layout_marginTop="30dp"
        android:text="@string/upload"
        android:textSize="30dp"
        android:onClick="confirmOrUpload"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/exception_confirm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/operatore_bg"
        android:layout_marginTop="30dp"

        android:text="@string/positive"
        android:textSize="30dp"
        android:onClick="confirmOrUpload"
        android:visibility="visible"
        />


</com.scandev.View.LinearLayoutView>
